AWS/EC2/ec2-backend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: ec2-backend
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/ec2-backend: "true"
  podSelector:
    matchLabels:
      io.kompose.network/ec2-backend: "true"
